// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<BlockSkeleton /> should render a block skeleton 1`] = `
.c0 {
  border-radius: 4px;
  line-height: 1rem;
  height: 1rem;
  -webkit-animation: jXsTbE .8s linear infinite alternate;
  animation: jXsTbE .8s linear infinite alternate;
  -webkit-backface-visibility: hidden;
  backface-visibility: hidden;
  will-change: opacity;
  background-color: #E1E6EB;
  border: 1px solid #E1E6EB;
  display: block;
}

<BlockSkeleton
  showSkeleton={true}
>
  <styled.span>
    <span
      className="c0"
    />
  </styled.span>
</BlockSkeleton>
`;

exports[`<BlockSkeleton /> should render a block skeleton with set width and height 1`] = `
.c0 {
  border-radius: 4px;
  line-height: 1rem;
  width: 400px;
  height: 200px;
  -webkit-animation: jXsTbE .8s linear infinite alternate;
  animation: jXsTbE .8s linear infinite alternate;
  -webkit-backface-visibility: hidden;
  backface-visibility: hidden;
  will-change: opacity;
  background-color: #E1E6EB;
  border: 1px solid #E1E6EB;
  display: block;
}

<BlockSkeleton
  height={200}
  showSkeleton={true}
  width={400}
>
  <styled.span
    height="200px"
    width="400px"
  >
    <span
      className="c0"
      height="200px"
      width="400px"
    />
  </styled.span>
</BlockSkeleton>
`;
